[package]
name = "warp-431"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"

[dependencies]
rcgen = "0.7"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = { version = "0.2", features = ["tls"] }

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper" }
warp = { git = "https://github.com/daxpedda/warp", branch = "upgrade-to-https" }
